--- a/Areas/Admin/Views/Quizzs/Edit.cshtml
+++ b/Areas/Admin/Views/Quizzs/Edit.cshtml
@@ -50,7 +50,7 @@
 
                         <div class="mb-3">
                             <label asp-for="DurationInMinutes" class="form-label fw-bold">Thời gian làm bài
-                                (giây)</label>
+                            </label>
                             <input asp-for="DurationInMinutes" type="number" class="form-control " min="1"
                                 placeholder="Nhập thời gian làm bài" />
                             <span asp-validation-for="DurationInMinutes" class="text-danger"></span>
