--- a/Areas/Admin/Views/MucDo/Create.cshtml
+++ b/Areas/Admin/Views/MucDo/Create.cshtml
@@ -22,7 +22,7 @@
                 <div asp-validation-summary="ModelOnly" class="alert alert-danger d-none"></div>
 
                 <div class="mb-4">
-                    <label asp-for="Name" class="form-label fw-semibold">Tên danh mục</label>
+                    <label asp-for="Name" class="form-label fw-semibold">Tên mức độ</label>
                     <input asp-for="Name" class="form-control " placeholder="Nhập tên danh mục..." />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
