--- a/Areas/Admin/Views/Quizzs/Create.cshtml
+++ b/Areas/Admin/Views/Quizzs/Create.cshtml
@@ -44,11 +44,11 @@
                         </div>
 
                         <div class="mb-3">
-                            <label asp-for="DurationInMinutes" class="form-label fw-bold">Thời gian làm bài
-                               </label>
-                            <input asp-for="DurationInMinutes" type="number" class="form-control " id="durationInput"
+                            <label asp-for="DurationInSeconds" class="form-label fw-bold">Thời gian làm bài
+                            </label>
+                            <input asp-for="DurationInSeconds" type="number" class="form-control " id="durationInput"
                                 min="1" placeholder="Nhập thời gian làm bài" />
-                            <span asp-validation-for="DurationInMinutes" class="text-danger"></span>
+                            <span asp-validation-for="DurationInSeconds" class="text-danger"></span>
                             <p id="formattedTime" class="mt-2 text-primary fw-bold"></p>
                         </div>
 
