--- a/Areas/Admin/Views/Quizzs/Edit.cshtml
+++ b/Areas/Admin/Views/Quizzs/Edit.cshtml
@@ -49,11 +49,11 @@
                         </div>
 
                         <div class="mb-3">
-                            <label asp-for="DurationInMinutes" class="form-label fw-bold">Thời gian làm bài
+                            <label asp-for="DurationInSeconds" class="form-label fw-bold">Thời gian làm bài
                             </label>
-                            <input asp-for="DurationInMinutes" type="number" class="form-control " min="1"
+                            <input asp-for="DurationInSeconds" type="number" class="form-control " min="1"
                                 placeholder="Nhập thời gian làm bài" />
-                            <span asp-validation-for="DurationInMinutes" class="text-danger"></span>
+                            <span asp-validation-for="DurationInSeconds" class="text-danger"></span>
                         </div>
 
                         <div class="mb-3">
