--- a/Areas/Admin/Views/Quizzs/Index.cshtml
+++ b/Areas/Admin/Views/Quizzs/Index.cshtml
@@ -37,7 +37,7 @@
 
                     <td>
 
-                        @item.DurationInMinutes
+                        @item.DurationInSeconds
 
 
                     </td>
