--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,7 +14,8 @@
                 foreach (var item in Model.DanhMucs)
                 {
                     <button class="btn btn-violet category-btn w-100 d-flex align-items-center">
-                        <a asp-action="Index" asp-controller="Home" class="text-decoration-none"><i class="@item.Icon"></i>
+                        <a asp-action="CategoryQuizz" asp-controller="Home" asp-route-Id="@item.Id"
+                            class="text-decoration-none"><i class="@item.Icon"></i>
                             <span class="ms-2">@item.Title</span></a>
                     </button>
                 }
@@ -44,7 +45,8 @@
 
                                             <div class="card-body">
                                                 <h6 class="quiz-title  text-primary font-weight-bold">@quizz.Title</h6>
-                                                <p class="text-muted text-center">@quizz.QuestionNumber câu hỏi - 2 lượt chơi</p>
+                                                <p class="text-muted text-center">@quizz.QuestionNumber câu hỏi - @quizz.LuotChoi lượt chơi
+                                                </p>
                                             </div>
                                         </div>
                                     </a>
