--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,26 +18,31 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-light nav-bg  fixed-top px-3 container">
             <div class="container-fluid d-flex justify-content-between align-items-center">
                 <h2 class="mb-0 text-center"> <i class="fas fa-sun text-warning fa-lg"></i>QUIZZ</h2>
                 <div class="d-flex  justify-content-center">
-                    <input type="text" class="form-control me-2" style="min-width: 400px;"
-                        placeholder="🔍 Tìm kiếm câu đố">
+                    <form asp-action="Index">
+                        <input type="text" class="form-control me-2" name="keySearch" style="min-width: 400px;"
+                            placeholder="🔍 Tìm kiếm câu đố" value="@ViewBag.keySearch">
+                    </form>
+
                 </div>
-                    @if (SignInManager.IsSignedIn(User))
-                    {
-                            <a class="nav-link dropdown-toggle text-dark" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                               <img src="~/Image/avatar.png" style="margin:0;padding:0;width:2em;height:2em" />
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-end shadow-sm" aria-labelledby="userDropdown">
-                                <li>
+                @if (SignInManager.IsSignedIn(User))
+                {
+                    <a class="nav-link dropdown-toggle text-dark" href="#" id="userDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="~/Image/avatar.png" style="margin:0;padding:0;width:2em;height:2em" />
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end shadow-sm" aria-labelledby="userDropdown">
+                        <li>
                             <a class="dropdown-item text-center" asp-area="Identity" asp-page="/Account/Manage/Profile">
-                                         Quản lý tài khoản
-                                    </a>
-                                </li>
+                                Quản lý tài khoản
+                            </a>
+                        </li>
                         @if ((await UserManager.GetUserAsync(User))?.UserName == "Admin")
                         {
                             <li>
@@ -47,23 +52,23 @@
                             </li>
                         }
 
-                                <li>
-                                    <form id="logoutForm" class="dropdown-item p-0 m-0"
-                                          asp-area="Identity" asp-page="/Account/Logout"
-                                          asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                                        <button id="logout" type="submit" class="btn  text-danger w-100 text-center p-2">
-                                            <i class="bi bi-box-arrow-right"></i> Đăng xuất
-                                        </button>
-                                    </form>
-                                </li>
-                            </ul>
-                    }
-                    else
-                    {
-                            <a class="btn btn-warning " asp-area="Identity" asp-page="/Account/Login">
-                                Đăng nhập
-                            </a>
-                    }
+                        <li>
+                            <form id="logoutForm" class="dropdown-item p-0 m-0" asp-area="Identity"
+                                asp-page="/Account/Logout"
+                                asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                                <button id="logout" type="submit" class="btn  text-danger w-100 text-center p-2">
+                                    <i class="bi bi-box-arrow-right"></i> Đăng xuất
+                                </button>
+                            </form>
+                        </li>
+                    </ul>
+                }
+                else
+                {
+                    <a class="btn btn-warning " asp-area="Identity" asp-page="/Account/Login">
+                        Đăng nhập
+                    </a>
+                }
             </div>
         </nav>
     </header>
@@ -73,7 +78,7 @@
 
     </div>
 
-    
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
